--- a/Covid19Project/Webpage/Style.css
+++ b/Covid19Project/Webpage/Style.css
@@ -10,26 +10,36 @@
 }
 .menu ul{
     display: inline-flex;
-    margin: 45px;
+    width:50%;  
+    margin-top: 2.5%;
+    margin-bottom: 2%;
+    margin-right: 5%;
+    margin-left: 3%;
 }
 .menu li{
     list-style: none;
-    margin: 0 14px;
-    font-size: 26px;
+    width: 50%;     
+    height: auto;
+    margin-top: 0%;
+    margin-bottom: 0%;
+    margin-right: -43%;
+    margin-left: 2%;
+    font-size: 155%;
     color: #00000;
     cursor: pointer;
 }
 .logo img{
-    width: 50px;
-    margin-top: -7px;
-    margin-right: -5px;
+    width: 11%;
+    height: auto;
+    margin-top: -10%;
+    margin-bottom: -3%; 
 }
 .btn {
     border: inherit;
-    border-radius: 7px;
+    border-radius: 8%;
     background-color: #DCDCDC;
-    padding: 12px 38px;
-    font-size: 17px;
+    padding: 0.7% 3.2%;
+    font-size: 90%;
     cursor: pointer;
     display: inline-block;
   }
@@ -37,27 +47,39 @@
   .btn:hover {background: #eee;}
   .left {color: rgb(0, 0, 0);}
   .right {color: rgb(0, 0, 0);}
-.descrip{
-    font-size: 11px;
-    margin: 0 27px;
+.line{  
+    display: block; 
+    margin-top: -0.5%;
+    margin-bottom: 1%;
+    overflow: hidden; 
+    border-style: inset; 
+    border-width: 2.3px;
+    border-color: #4682B4;
 }
+.note{
+    background-color: inherit;
+    margin-left: 68%;
+    margin-bottom: -10%;   
+    font-size: 45%;    
+    cursor: pointer;
+    display: inline-block;
+}   
 .banner{
-    width: 80%;
-    height: 70%;
+    width: 100%;
+    height: 100%;
     top: 25%;
-    left: 10px;
     position: absolute;
     color: #DCDCDC;
 }
-.description{
-    border-width: 1.4px;
+.description{   
+    border-width: 2px;    
     border-style: solid;
     border-color: #DAA520;    
-    border-radius: 7px;
+    border-radius: 8%;
     background-color: inherit;
-    padding: 6px 8px;
-    font-size: 11px;
-    margin: 0 58px;
+    padding: 0.4% 1%;
+    font-size: 65%;
+    margin-left: 3.9%;
     cursor: pointer;
     display: inline-block;
 }
