--- a/Covid19Project/Webpage/Style.css
+++ b/Covid19Project/Webpage/Style.css
@@ -3,6 +3,18 @@
     padding: 0;
     font-family: sans-serif;
 }
+.containerHead{
+    background: linear-gradient(to right,#40E0D0,#4682B4);
+    width: 100%;
+    height: 15%;    
+}
+.covidImg img{
+    list-style: none;
+    max-height:100%;    
+    font-size: 155%;
+    cursor: pointer;
+    object-fit: cover;
+}
 .container{
     width: 100%;
     height: 100%;
@@ -16,7 +28,7 @@
 }
 .menu ul{
     display: inline-flex;
-    width:50%;  
+    max-width:50%;  
     margin-top: 1.75%;
     margin-bottom: 1.75%;
     margin-right: 5%;
@@ -24,7 +36,7 @@
 }
 .menu li{
     list-style: none;
-    width: 50%;     
+    max-width: 50%;     
     height: auto;
     margin-top: 0%;
     margin-bottom: 0%;
@@ -35,8 +47,8 @@
     cursor: pointer;
 }
 .logo img{
-    width: 11%;
-    height: auto;
+    max-width: 12%;
+    max-height: auto;
     margin-top: -10%;
     margin-bottom: -3%; 
 }
@@ -116,11 +128,11 @@
 }
 .key img{
     width: 90%;
-    margin-left: 45%;
+    margin-left: -150%;
     margin-top: -4%;
 }
 
-.dropdown-content {
+.dropdown-content{
     display: none;
     position: absolute;
     background-color: #FFF;
@@ -133,7 +145,7 @@
     margin-right:8.5%;
     margin-top:-1.5%;
   }
-.dropdown-content a {
+.dropdown-content a{
     font-size: 85%;
     color: black;
     padding: 1.5% 1.5%;
@@ -141,7 +153,7 @@
     display: block;
 }
 .show {display:block;}
-.dropdown-content2 {
+.dropdown-content2{
     display: none;
     position: absolute;
     background-color: #FFF;
@@ -154,7 +166,7 @@
     margin-right:10%;
     margin-top:-3%;
 }
-.dropdown-content2 a {
+.dropdown-content2 a{
     font-size: 80%;
     color: black;
     padding: 1.5% 1.5%;
