--- a/Covid19Project/Webpage/Style.css
+++ b/Covid19Project/Webpage/Style.css
@@ -8,7 +8,21 @@
     width: 100%;
     height: 15%;
     max-height: 100%;
-    min-height:10%;  
+    min-height: 10%;  
+}
+.containerFoot{
+    background: #808080;
+    width: 100%;
+    height: 25%;
+    max-height: 100%;
+    min-height: 10%;
+    margin-top: 15%;  
+}
+.update{
+    margin-left:75%;
+    position:relative;
+    color: #FFFFFF;
+    font-size: 70%
 }
 .meDescrip{
     margin-left: 4%;
@@ -17,20 +31,44 @@
     max-width: 100%;
     min-height: 5%;
     min-width: 5%;
-    font-size: 75%;
+    font-size: 85%;
     color: #FFFFFF;
     position: absolute;
 }
-.meDescrip2{
+.gitHub{
     margin-left: 4%;
     margin-top: 3.5%;
     max-height: 100%;
     max-width: 100%;
     min-height: 3%;
     min-width: 5%;
-    font-size: 75%;
+    font-size: 250%;
     color: #FFFFFF;
     position: absolute;
+}
+.linkedIn{
+    margin-left: 7.5%;
+    margin-top: 3.5%;
+    max-height: 100%;
+    max-width: 100%;
+    min-height: 3%;
+    min-width: 5%;
+    font-size: 250%;
+    color: #FFFFFF;
+    position: absolute;
+}
+.lastPart{
+    margin-left: 25%;
+    margin-right: 25%;
+    margin-top: 3%;
+    max-height: 100%;
+    max-width: 100%;
+    min-height: 5%;
+    min-width: 5%;
+    font-size: 85%;
+    color: #FFFFFF;
+    position: absolute;
+    text-align: center;
 }
 .covidImg img{
     list-style: none;
@@ -115,8 +153,17 @@
 }
 .line2{  
     display: block; 
-    margin-top: 4.5%;
+    margin-top: 5%;
     margin-bottom: -3%;
+    overflow: hidden; 
+    border-style: inset; 
+    border-width: 2.3px;
+    border-color: #DAA520;
+}
+.line3{  
+    display: block; 
+    margin-top:20%;
+    margin-bottom: 0%;
     overflow: hidden; 
     border-style: inset; 
     border-width: 2.3px;
@@ -195,10 +242,13 @@
 }
 .show2 {display:block;}
 .blank{
-    margin-top: 38%;
+    margin-top: 40.5%;
+}
+.blank2{
+    margin-top: 41.5%;
+}
+.blank3{
+    margin-top: 35%;
 }
 
 
-.tableauPlaceholdertop{
-    margin-top:20%;
-}
