--- a/Covid19Project/Webpage/Style.css
+++ b/Covid19Project/Webpage/Style.css
@@ -16,8 +16,8 @@
     height: 25%;
     max-height: 100%;
     min-height: 10%;
-    margin-top: 15%;  
-    position:relative;
+    margin-top: 40%;  
+    position: absolute;
 }
 .update{
     margin-left:75%;
@@ -236,25 +236,21 @@
 }
 .dropdown-content2 a{
     font-size: 80%;
-    color: black;
+    color: black;   
     padding: 1.5% 1.5%;
     text-decoration: none;
     display: block;
 }
 .show2 {display:block;}
 .blank{
-    margin-top: 40.5%;
-    position: relative;
+    margin-top: 50.5%;
+    position: absolute;
 }
 .blank2{
-    margin-top: 41.5%;
-    position: relative;
-}
-.blank3{
-    margin-top: 35%;
-    position: relative;
+    margin-top: 51.5%;
+    position: absolute;
 }
 .tableauPlaceholder{
-    position: relative;
+    position: absolute;
 }
 
