--- a/Covid19Project/Webpage/Style.css
+++ b/Covid19Project/Webpage/Style.css
@@ -16,7 +16,7 @@
     height: 25%;
     max-height: 100%;
     min-height: 10%;
-    margin-top: 40%;  
+    margin-top: 215%;
     position: absolute;
 }
 .update{
@@ -86,8 +86,16 @@
 .container2{
     width: 100%;
     height: 100%;
+    margin-top: 35%;
     background: #FFFFFF;
-    margin-top: 3%;    
+    position:absolute
+}
+.container3{
+    width: 100%;
+    height: 100%;
+    margin-top: 126%;
+    background: #FFFFFF;
+    position:absolute
 }
 .menu ul{
     display: inline-flex;
@@ -145,7 +153,6 @@
   .right {color: rgb(0, 0, 0);}
 .line{  
     display: block; 
-    margin-top: -0.5%;
     margin-bottom: 1%;
     overflow: hidden; 
     border-style: inset; 
@@ -154,17 +161,7 @@
 }
 .line2{  
     display: block; 
-    margin-top: 5%;
-    margin-bottom: -3%;
-    overflow: hidden; 
-    border-style: inset; 
-    border-width: 2.3px;
-    border-color: #DAA520;
-}
-.line3{  
-    display: block; 
-    margin-top:20%;
-    margin-bottom: 0%;
+    margin-top: 1.5%;
     overflow: hidden; 
     border-style: inset; 
     border-width: 2.3px;
@@ -236,21 +233,13 @@
 }
 .dropdown-content2 a{
     font-size: 80%;
-    color: black;   
+    color: black;
     padding: 1.5% 1.5%;
     text-decoration: none;
     display: block;
 }
 .show2 {display:block;}
-.blank{
-    margin-top: 50.5%;
-    position: absolute;
-}
-.blank2{
-    margin-top: 51.5%;
-    position: absolute;
-}
-.tableauPlaceholder{
-    position: absolute;
-}
 
+.tableauPlaceholder{    
+    position: absolute;
+}
