--- a/Covid19Project/Webpage/Style.css
+++ b/Covid19Project/Webpage/Style.css
@@ -3,24 +3,27 @@
     padding: 0;
     font-family: sans-serif;
 }
-.containerHead{
+.start{
     background: linear-gradient(to right,#B22222,#4682B4);
     width: 100%;
-    height: 15%;
-    max-height: 100%;
-    min-height: 10%;  
+    height: 10%;
+    max-height: 10%;
+    min-height: 16%; 
+    margin-top: 0%;
+    position: absolute;
 }
-.containerFoot{
+.end{
     background: #808080;
     width: 100%;
     height: 25%;
     max-height: 100%;
     min-height: 10%;
-    margin-top: 220%;
-    position: absolute;
+    margin-top: 5%;
+    position: absolute; 
+
 }
 .update{
-    margin-left:75%;
+    margin-left:85%;
     position:relative;
     color: #FFFFFF;
     font-size: 70%
@@ -73,12 +76,13 @@
 }
 .covidImg img{
     list-style: none;
-    max-height:100%;    
-    font-size: 155%;
+    max-height:auto; 
+    max-width: 15%;   
     cursor: pointer;
     object-fit: cover;
 }
 .container{
+    margin-top: -10%;
     width: 100%;
     height: 100%;
     background: #FFFFFF;
@@ -86,16 +90,35 @@
 .container2{
     width: 100%;
     height: 100%;
-    margin-top: 36.5%;
+    margin-top: 3.5%;
     background: #FFFFFF;
     position: absolute;
 }
 .container3{
     width: 100%;
     height: 100%;
-    margin-top: 127.5%;
+    margin-top: 94.5%;
     background: #FFFFFF;
     position: absolute;
+}
+.menu2 ul{
+    display: inline-flex;
+    max-width:50%;  
+    margin-top: 10%;
+    margin-bottom: 1.75%;
+    margin-right: 5%;
+    margin-left: 3%;
+}
+.menu2 li {
+    list-style: none;
+    max-width: 50%;     
+    height: auto;
+    margin-top: 0%;
+    margin-bottom: 0%;
+    margin-right: -43%;
+    margin-left: 2%;
+    font-size: 155%;
+    cursor: pointer;
 }
 .menu ul{
     display: inline-flex;
@@ -160,8 +183,9 @@
     border-color: #4682B4;
 }
 .line2{  
-    display: block; 
-    margin-top: 1.5%;
+    display: block;
+    /*1.5*/ 
+    margin-top: 4.5%;
     overflow: hidden; 
     border-style: inset; 
     border-width: 2.3px;
@@ -187,7 +211,7 @@
     border-style: solid;
     border-color: #DAA520;    
     border-radius: 8%;
-    background-color: inherit;
+    background-color: #inherit;
     padding: 0.4% 1%;
     font-size: 65%;
     margin-left: 3.9%;
@@ -243,3 +267,11 @@
 .tableauPlaceholder{    
     position: absolute;
 }
+
+.blank{
+    display:block;
+    margin-top: 10%;
+    margin-bottom: 10%;
+    position: position;
+}
+
